--- a/package.json
+++ b/package.json
@@ -25,42 +25,46 @@
   "author": "CertaintyAI Team",
   "license": "MIT",
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^2.4.3",
+    "compromise": "^14.14.4",
     "cors": "^2.8.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
+    "helmet": "^7.1.0",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
-    "bcryptjs": "^2.4.3",
+    "mammoth": "^1.6.0",
+    "multer": "^1.4.5-lts.1",
+    "natural": "^8.1.0",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
     "redis": "^4.6.10",
-    "multer": "^1.4.5-lts.1",
-    "pdf-parse": "^1.1.1",
-    "mammoth": "^1.6.0",
-    "winston": "^3.11.0",
-    "dotenv": "^16.3.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "@types/node": "^20.8.10",
-    "@types/express": "^4.17.21",
+    "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/jest": "^29.5.8",
     "@types/joi": "^17.2.3",
     "@types/jsonwebtoken": "^9.0.5",
-    "@types/bcryptjs": "^2.4.6",
-    "@types/pg": "^8.10.7",
     "@types/multer": "^1.4.11",
-    "@types/uuid": "^9.0.7",
-    "@types/jest": "^29.5.8",
+    "@types/natural": "^5.1.5",
+    "@types/node": "^20.8.10",
+    "@types/pdf-parse": "^1.1.5",
+    "@types/pg": "^8.10.7",
     "@types/supertest": "^2.0.16",
-    "typescript": "^5.2.2",
+    "@types/uuid": "^9.0.7",
+    "@typescript-eslint/eslint-plugin": "^6.10.0",
+    "@typescript-eslint/parser": "^6.10.0",
+    "eslint": "^8.53.0",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "ts-node-dev": "^2.0.0",
-    "jest": "^29.7.0",
-    "ts-jest": "^29.1.1",
-    "supertest": "^6.3.3",
-    "eslint": "^8.53.0",
-    "@typescript-eslint/eslint-plugin": "^6.10.0",
-    "@typescript-eslint/parser": "^6.10.0"
+    "typescript": "^5.2.2"
   }
 }
