--- a/package.json
+++ b/package.json
@@ -39,11 +39,17 @@
     "natural": "^8.1.0",
     "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.8.0",
     "redis": "^4.6.10",
     "uuid": "^9.0.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.1.4",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^14.5.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
@@ -55,12 +61,16 @@
     "@types/node": "^20.8.10",
     "@types/pdf-parse": "^1.1.5",
     "@types/pg": "^8.10.7",
+    "@types/react": "^18.2.37",
+    "@types/react-dom": "^18.2.15",
     "@types/supertest": "^2.0.16",
     "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^6.10.0",
     "@typescript-eslint/parser": "^6.10.0",
     "eslint": "^8.53.0",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
