--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "test:integration": "jest --testPathPattern=tests/integration",
     "test:e2e": "jest --testPathPattern=tests/e2e",
     "test:coverage": "jest --coverage",
+    "test:e2e:run": "ts-node tests/e2e/test-runner.ts",
+    "test:performance": "jest tests/e2e/performance-benchmarks.test.ts --runInBand",
+    "test:security": "jest tests/e2e/security-penetration.test.ts --runInBand",
+    "test:workflows": "jest tests/e2e/verification-workflows.test.ts --runInBand",
+    "test:smoke": "ts-node tests/smoke/smoke-tests.ts",
+    "db:migrate:test": "node -e \"console.log('Test migrations would run here')\"",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix"
   },
@@ -71,6 +77,7 @@
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
+    "nock": "^13.4.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
